# cppbase

./: .clang-format  .gitattributes  .gitignore  .gitlab-ci.yml  CMakeLists.txt  CMakeSettings.json  LICENSE  LICENSE.txt  README.md
.github/workflows/: build.yml  cmake.yml
cmake/: CapnProto.cmake  ClangFormat.cmake  Common.cmake
common/: Archive.h  BlockingQueue.h  Encoding.h  Encoding_intl.h  FileSystem.h  Flags.h  ForkJoinPool.h  Global.h  MemoryLeaks.h  PointCloud.h  PropertyPath.h  Semaphore.h  Serializer.h  ThreadPool.h  ThreadPool_intl.h  Timer.h  Uuid.h  Variant.h  Variant_any.h  Variant_rttr.h
common/rttr/: PropertyPath.impl.h  Variant.impl.h
common/std/: PropertyPath.impl.h  Variant.impl.h
config/: log.conf
docs/: CMakeLists.txt  Doxyfile.in
locale/: .gitattributes  README.md  locale.cmake
logging/: Logging.h  Logging_intl.h
logging/spdlog_setup/: conf.h
logging/spdlog_setup/details/: conf_impl.h  setup_error.h  template_impl.h
network/: Common.h  FtpClient.h  TcpClient.h  TcpServer.h  UdpClient.h  UdpServer.h
sequence/: Container.h  Link.h  Processor.h  Sequence.h
tests/: CMakeLists.txt
tests/common/: BlockingQueueTests.cpp  CMakeLists.txt  EigenTests.cpp  EncodingTests.cpp  FlagsTests.cpp  MemoryLeaksTests.cpp  PropertyPathTests.cpp  SemaphoreTests.cpp  SerializationTests.cpp  ThreadPoolTests.cpp  TimerTests.cpp  UuidTests.cpp  VariantTests.cpp
tests/logging/: CMakeLists.txt  LoggingTests.cpp
tests/network/: CMakeLists.txt  ForkJoinPoolTests.cpp  TcpTests.cpp  UdpTests.cpp  ZMQTests.cpp
tests/sequence/: CMakeLists.txt  ProcessorTests.cpp  SequenceTests.cpp  TestProcessors.h
tests/serialization/: CMakeLists.txt  SerializationTests.cpp  addressbook.capnp  c++.capnp
